# mace

./: Dockerfile  README.md  docker-compose.yaml  install_mace.bat  mace.bat  make_release.sh
code/stomp/: .project  build.gradle  ccastConfig.properties  gradlew.bat  localDevice.properties  runLightweightRosStacks.sh  runMqttRosBridge.sh  settings.gradle  sim.properties  start.bat  start.sh  startRosSim.sh  startSim.sh  stomp_start_payloads.sh  stomp_start_targets.sh  stomp_stop_payloads.sh  stomp_stop_targets.sh  stopRosSim.sh  stopSim.sh
code/stomp/ros_sim/src/rover_ros/rover_launcher/: .buildconfig  CMakeLists.txt  package.xml
code/stomp/ros_sim/src/rover_ros/rover_launcher/config/: 10-ccast.rules  CONFIG  params_diff  rc.local  rover_gps.params  rover_gps_can.params  rover_gps_final.params
code/stomp/ros_sim/src/rover_ros/rover_launcher/launch/: amcl.launch  april_tag_detection.launch  april_tag_detection_airsim.launch  april_tag_detection_gazebo.launch  avoidance.launch  avoidance_sitl.launch  drive.launch  ekf.launch  ekf_global.launch  ekf_indoors.launch  hector_map_transition.launch  imu.launch  lidar.launch  map.launch  map_carto.launch  map_hector.launch  map_odom_tf.launch  map_rtabmap.launch  map_server.launch  mavros.launch  nav.launch  nav_global.launch  nav_sat.launch  nav_transition.launch  point_cloud_converter.launch  realsense.launch  realsense_tracking.launch  tracking.launch  usb_cam.launch
code/stomp/ros_sim/src/rover_ros/rover_launcher/params/: base_local_planner_params.yaml  carto_map_builder.lua  carto_rover.lua  carto_trajectory_builder.lua  costmap_common.yaml  costmap_common_global.yaml  costmap_common_transition.yaml  dwa_local_planner.yaml  dwa_local_planner_global.yaml  dwa_local_planner_transition.yaml  ekf.yaml  ekf_global.yaml  ekf_indoors.yaml  global_costmap.yaml  global_costmap_global.yaml  global_costmap_transition.yaml  global_planner.yaml  global_planner_transition.yaml  imu.yaml  lidar_filter.yaml  local_costmap.yaml  local_costmap_global.yaml  local_costmap_transition.yaml  mavros_config.yaml  mavros_pluginlists.yaml  move_base.yaml  nodelet.launch.xml  px4_config.yaml  px4_pluginlists.yaml  realsense.json  realsense.xml  realsense_test.json  settings.yaml  settings_old.yaml  tags.yaml  tags_new_old.yaml  tags_old.yaml  usb_back_camera.yaml
code/stomp/ros_sim/src/rover_ros/state_observer/: CMakeLists.txt  package.xml
code/stomp/ros_sim/src/rover_ros/state_observer/config/: nodes.yaml  nodes_lw.yaml  nodes_sitl.yaml  nodes_sitl_airsim.yaml
code/stomp/ros_sim/src/rover_ros/state_observer/msg/: Diagnostics.msg
code/stomp/ros_sim/src/rover_ros/state_observer/src/: node.py  observer.py  system_manager.py
code/stomp/ros_sim/src/rover_ros/state_observer/srv/: SetMode.srv
config/bled112/: cdc.xml  gatt.xml  hardware.xml  mace.bgproj  mace_bled112.hex
scripts/: .webm  configure_ble.sh  configure_gpsd.sh  convert_videos.sh  create_mission_report.sh  create_pi_image.sh  create_sim_analysis.sh  devel_run.sh  exclude.txt  fetch_sim_analytics_logs.sh  init_payload.sh  init_target.sh  label_ble_port_on_pi.sh  mace.sh  parse_logs.sh  run_init_device.sh  single_run_solution_demo.sh  start_analytics_server.sh  start_mace_docker.bat  start_mace_docker.sh  start_payload.sh  start_target.sh  step_into_docker_container.sh  stop_analytics_server.sh  transfer_mace_to_pi.sh  update_pi.sh
(+377 files in other folders)
