<?xml version="1.0"?>
<package>
  <name>state_observer</name>
  <version>0.0.1</version>
  <description>Vehicle state observer</description>

  <maintainer email="giovani.diniz@bbn.com">Giovani Diniz</maintainer>

  <license>Proprietary</license>

  <author email="giovani.diniz@bbn.com">Giovani Diniz</author>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>

  </export>
</package>
